--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
+    "react-native-redash": "^14.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
