--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-collapsible": "^1.5.2",
+    "react-native-countdown-circle-timer": "^2.2.2",
     "react-native-countdown-component": "^2.7.1",
+    "react-native-customizable-countdown": "^1.1.3",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
