--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-native-collapsible": "^1.5.2",
     "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^2.0.2",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-redash": "^14.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-scrollable-tab-view-forked": "^1.1.1",
+    "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
