minID login implemented. Redirect back to app not working

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "scheme": "digitalborger",
     "name": "dc20-digitalborger-frontend",
     "slug": "dc20-digitalborger-frontend",
     "version": "1.0.0",
@@ -21,6 +22,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
   }
 }
