--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "expo": "~38.0.1",
+    "expo-auth-session": "~1.4.0",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
+    "jwt-decode": "^2.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
