--- a/app.json
+++ b/app.json
@@ -18,10 +18,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.jorho.dc20-digitalborger-frontend"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
+    }
   }
 }
