--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~38.0.1",
     "expo-app-auth": "~9.1.1",
     "expo-auth-session": "~1.4.0",
+    "expo-crypto": "~8.2.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "jwt-decode": "^2.2.0",
@@ -26,9 +27,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-collapsible": "^1.5.2",
     "react-native-countdown-component": "^2.7.1",
+    "react-native-crypto": "^2.2.0",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
+    "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.9.0",
     "react-native-redash": "^14.1.1",
     "react-native-screens": "^2.9.0",
