--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.19.2",
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
