--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/material-bottom-tabs": "^5.2.12",
@@ -20,6 +21,7 @@
     "expo-crypto": "~8.2.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
     "linking": "0.1.0-beta.5",
     "react": "~16.11.0",
