--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "uri-scheme": "^1.0.22"
+    "uri-scheme": "^1.0.22",
+    "expo-secure-store": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
