--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@shopify/restyle": "^1.0.4",
     "axios": "^0.19.2",
     "expo": "~38.0.1",
     "expo-app-auth": "~9.1.1",
