--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-arrow": "^1.0.3",
+    "react-native-calendars": "^1.300.0",
     "react-native-collapsible": "^1.5.2",
     "react-native-countdown-circle-timer": "^2.2.2",
     "react-native-countdown-component": "^2.7.1",
