--- a/package.json
+++ b/package.json
@@ -21,36 +21,40 @@
     "expo-app-auth": "~9.1.1",
     "expo-auth-session": "~1.4.0",
     "expo-crypto": "~8.2.1",
+    "expo-notifications": "~0.3.3",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "linking": "0.1.0-beta.5",
+    "npm": "^6.14.7",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-icons": "^3.10.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-arrow": "^1.0.3",
     "react-native-calendar-strip": "^2.0.8",
     "react-native-calendars": "^1.300.0",
     "react-native-collapsible": "^1.5.2",
-    "react-native-countdown-circle-timer": "^2.2.2",
+    "react-native-countdown-circle-timer": "^2.3.6",
     "react-native-countdown-component": "^2.7.1",
     "react-native-customizable-countdown": "^1.1.3",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-redash": "^14.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-scrollable-tab-view-forked": "^1.1.1",
     "react-native-slideable-calendar-strip": "^0.4.0",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "expo-notifications": "~0.3.3",
-    "uri-scheme": "^1.0.22",
-    "react-native-svg": "12.1.0"
+    "uri-scheme": "^1.0.22"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
