--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-ionicons": "^4.6.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-redash": "^14.1.1",
